--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
+    "lazy": "1.0.11",
     "rollup": "^0.50.0",
     "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-vue": "^2.4.2"
