--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dev": "rollup -c -w"
   },
   "dependencies": {
+    "email-validator": "^1.1.1",
+    "nativescript-theme-core": "^1.0.4",
     "nativescript-vue": "^0.1.6",
     "tns-core-modules": "3.2.0",
     "vue-router": "^2.7.0"
@@ -36,6 +38,8 @@
     "lazy": "1.0.11",
     "rollup": "^0.50.0",
     "rollup-plugin-cleanup": "^1.0.1",
+    "rollup-plugin-css-only": "^0.2.0",
+    "rollup-plugin-scss": "^0.3.0",
     "rollup-plugin-vue": "^2.4.2"
   }
 }
