--- a/tns/package.json
+++ b/tns/package.json
@@ -25,6 +25,7 @@
     "dev": "rollup -c -w"
   },
   "dependencies": {
+    "email-validator": "^1.1.1",
     "nativescript-vue": "^0.1.6",
     "tns-core-modules": "3.2.0",
     "vue-router": "^2.7.0"
