--- a/tns/package.json
+++ b/tns/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "email-validator": "^1.1.1",
+    "nativescript-social-share": "^1.4.0",
     "nativescript-vue": "^0.1.6",
     "tns-core-modules": "3.2.0",
     "vue-router": "^2.7.0"
