--- a/package.json
+++ b/package.json
@@ -29,14 +29,21 @@
     "nativescript-theme-core": "^1.0.4",
     "nativescript-vue": "^0.1.6",
     "tns-core-modules": "3.2.0",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.1",
+    "vuex-router-sync": "^4.3.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
     "lazy": "1.0.11",
     "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-css-only": "^0.2.0",
     "rollup-plugin-root-import": "^0.2.2",
