--- a/tns/package.json
+++ b/tns/package.json
@@ -29,7 +29,9 @@
     "nativescript-social-share": "^1.4.0",
     "nativescript-vue": "^0.1.6",
     "tns-core-modules": "3.2.0",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.1",
+    "vuex-router-sync": "^4.3.2"
   },
   "devDependencies": {
     "babel-traverse": "6.26.0",
