--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   },
   "dependencies": {
     "email-validator": "^1.1.1",
+    "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "^1.0.4",
-    "nativescript-vue": "^0.1.6",
+    "nativescript-vue": "^0.1.23",
     "tns-core-modules": "3.2.0",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.1",
@@ -48,6 +49,7 @@
     "copy-webpack-plugin": "~4.0.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "~2.1.0",
+    "ignore-loader": "^0.1.2",
     "lazy": "1.0.11",
     "merge-files-webpack-plugin": "^1.1.2",
     "nativescript-css-loader": "~0.26.0",
@@ -60,7 +62,7 @@
     "style-loader": "^0.18.2",
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "2.5.2",
+    "vue-template-compiler": "^2.5.3",
     "webpack": "~2.6.1",
     "webpack-sources": "~1.0.1"
   }
