--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-webpack": "^0.6.3",
     "node-sass": "^4.5.3",
+    "ns-vue-loader": "^0.1.2",
     "raw-loader": "~0.5.1",
     "resolve-url-loader": "~2.0.2",
     "sass-loader": "^6.0.6",
