--- a/tns/package.json
+++ b/tns/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Groceries",
+  "main": "starter.js",
   "version": "1.0.0",
   "description": "A NativeScript-built iOS and Android app for managing grocery lists",
   "license": "MIT",
@@ -20,14 +21,10 @@
       "version": "3.1.0"
     }
   },
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
-  },
   "dependencies": {
     "email-validator": "^1.1.1",
     "nativescript-social-share": "^1.4.0",
-    "nativescript-vue": "^0.1.6",
+    "nativescript-vue": "^0.3.0",
     "tns-core-modules": "3.2.0",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.1",
@@ -37,9 +34,6 @@
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
-    "lazy": "1.0.11",
-    "rollup": "^0.50.0",
-    "rollup-plugin-cleanup": "^1.0.1",
-    "rollup-plugin-vue": "^2.4.2"
+    "lazy": "1.0.11"
   }
 }
