--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-vue": "^1.3.1",
-    "tns-core-modules": "~3.4.1",
+    "tns-core-modules": "~4.0.0",
     "vue": "^2.5.16",
-    "vue-loader": "^14.2.2"
+    "vue-loader": "^14.2.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -48,9 +51,9 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
+    "webpack": "^3.0.0",
+    "webpack-cli": "^1.0.13",
+    "webpack-dev-server": "^2.0.0",
     "webpack-merge": "^4.1.2",
     "webpack-synchronizable-shell-plugin": "0.0.7",
     "winston-color": "^1.0.0"
