--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "node-sass": "^4.7.2",
     "ns-vue-loader": "^0.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.5",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
+    "tailwindcss": "^0.5.3",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.0.0",
     "webpack-cli": "^1.0.13",
