--- a/package.json
+++ b/package.json
@@ -1,37 +1,45 @@
 {
   "name": "groceries-ns-vue",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A NativeScript-built iOS and Android app for managing grocery lists",
   "author": "Tiago Alves <tralves@gmail.com>",
   "license": "MIT",
   "nativescript": {
     "id": "org.nativescript.groceriesvue",
     "tns-ios": {
-      "version": "4.1.0"
+      "version": "4.2.0"
     },
     "tns-android": {
-      "version": "4.1.3"
+      "version": "4.2.0"
     }
   },
   "dependencies": {
+    "@vue/devtools": "5.0.0-beta.3",
     "email-validator": "^2.0.3",
-    "nativescript-social-share": "^1.5.0",
     "nativescript-theme-core": "^1.0.4",
-    "nativescript-vue": "^1.3.1",
-    "tns-core-modules": "~4.0.0",
+    "nativescript-vue": "^2.0.0",
+    "nativescript-vue-devtools": "^1.0.0",
+    "nativescript-social-share": "^1.5.0",
+    "nativescript-socket.io": "^0.9.0",
+    "nativescript-toast": "^1.4.6",
+    "tns-core-modules": "^4.2.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
+    "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.0",
     "lazy": "1.0.11",
     "mini-css-extract-plugin": "^0.4.1",
-    "nativescript-dev-webpack": "^0.15.0",
-    "nativescript-vue-template-compiler": "^1.3.1",
+    "nativescript-dev-webpack": "^0.17.0-2018-09-12-01",
+    "nativescript-vue-template-compiler": "^2.0.0-alpha.3",
     "nativescript-worker-loader": "~0.9.0",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
