--- a/package.json
+++ b/package.json
@@ -1,52 +1,34 @@
 {
   "name": "groceries-ns-vue",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A NativeScript-built iOS and Android app for managing grocery lists",
   "author": "Tiago Alves <tralves@gmail.com>",
   "license": "MIT",
   "nativescript": {
     "id": "org.nativescript.groceriesvue",
     "tns-android": {
-      "version": "5.1.0"
-    },
-    "tns-ios": {
-      "version": "5.1.1"
+      "version": "6.0.2"
     }
   },
   "dependencies": {
-    "@vue/devtools": "5.0.0-beta.3",
-    "email-validator": "^2.0.3",
-    "nativescript-social-share": "^1.5.0",
-    "nativescript-socket.io": "^0.9.0",
+    "email-validator": "^2.0.4",
+    "nativescript-social-share": "^1.5.2",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-toast": "^1.4.6",
-    "nativescript-vue": "^2.0.0",
-    "nativescript-vue-devtools": "^1.0.0",
-    "tns-core-modules": "^5.1.2",
-    "vuex": "^3.0.1"
+    "nativescript-vue": "^2.4.0",
+    "babel-loader": "^8.0.2",
+    "nativescript-vue-devtools": "^1.2.0",
+    "nativescript-socketio": "^3.2.1",
+    "@vue/devtools": "^5.1.1",
+    "tns-core-modules": "^6.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "babel-traverse": "6.26.0",
-    "babel-types": "6.26.0",
-    "babylon": "6.18.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-hot-loader": "^1.4.2",
-    "css-loader": "^1.0.0",
-    "lazy": "1.0.11",
-    "mini-css-extract-plugin": "^0.4.1",
-    "nativescript-dev-webpack": "^0.17.0-2018-09-12-01",
-    "nativescript-vue-template-compiler": "^2.0.0-alpha.3",
-    "nativescript-worker-loader": "~0.9.0",
+    "nativescript-vue-template-compiler": "^2.0.0",
+    "nativescript-dev-webpack": "^1.0.3",
     "node-sass": "^4.9.2",
-    "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "~1.2.7",
-    "vue-loader": "^15.2.6",
-    "webpack": "^4.16.4",
-    "webpack-bundle-analyzer": "~2.13.1",
-    "webpack-cli": "^3.1.0"
+    "vue-loader": "^15.4.0"
   }
 }
