--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "id": "org.nativescript.groceriesvue",
     "tns-android": {
       "version": "6.0.2"
+    },
+    "tns-ios": {
+      "version": "6.0.2"
     }
   },
   "dependencies": {
     "email-validator": "^2.0.4",
     "nativescript-social-share": "^1.5.2",
     "nativescript-theme-core": "^1.0.4",
-    "nativescript-toast": "^1.4.6",
+    "nativescript-toasty": "^1.3.0",
     "nativescript-vue": "^2.4.0",
     "babel-loader": "^8.0.2",
     "nativescript-vue-devtools": "^1.2.0",
